Addition of new gRPC endpoints
